# task_plastilin_func

./: README.md  config.py  currencies.py  database.ini  db_operations.py  main.py  pyproject.toml
